--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-react-router": "^1.0.1",
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^20",
