--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "react-youtube": "^10.1.0",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
