--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mishra-portfolio-react",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.7.0",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
