--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
+    "format": "prettier --write --cache .",
+    "format:check": "prettier --check --cache .",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
