Implement code changes to enhance functionality and improve performance

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
+    "lint": "run-s lint:oxlint lint:eslint",
+    "lint:eslint": "eslint --cache",
+    "lint:oxlint": "oxlint -c ./oxlintrc.json --tsconfig=./tsconfig.json",
     "format": "prettier --write --cache .",
     "format:check": "prettier --check --cache .",
     "typecheck": "react-router typegen && tsc"
@@ -16,6 +19,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "isbot": "^5.1.27",
+    "oxlint": "^1.11.1",
     "prettier": "^3.6.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
